--- a/cindex.html
+++ b/cindex.html
@@ -26,7 +26,7 @@
         </div>
         <div class="contact_container">
             <div class="contact_items">
-                <img src="images/fblogo.png">
+                <a hrer="https://www.facebook.com/profile.php?id=61572047443076" target="_blank"><img src="images/fblogo.png"></a>
                 <div>
                     <p>
                         <a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank">
