--- a/cindex.html
+++ b/cindex.html
@@ -26,7 +26,10 @@
         </div>
         <div class="contact_container">
             <div class="contact_items">
-                <a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank"><img src="images/fblogo.png"></a>
+<a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank" rel="noopener noreferrer">
+  <img src="images/fblogo.png" alt="Facebook Profile">
+</a>
+
                 <div>
                     <p>
                         <a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank">
