--- a/cindex.html
+++ b/cindex.html
@@ -30,23 +30,16 @@
   <img src="images/fblogo.png" alt="Facebook Profile">
 </a>
 
-                <div>
-                    <p>
-                        <a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank">
-                            From Love, With Love <br>
-                            https://www.facebook.com/profile.php? <br>
-                            id=61572047443076
-                        </a>
-                    </p>
-                </div>
             </div>
-            <div class="contact_items">
-                <img src="images/phone.png">
-                <div>
-                    <p>
-                        Shane Nicole M. Fernandez <br>
-                        09202070840
-                    </p>
+<div class="contact_items">
+    <img src="images/phone.png" alt="Phone Icon">
+    <div>
+        <p>
+            Shane Nicole M. Fernandez <br>
+            <a href="tel:09202070840">09202070840</a>
+        </p>
+    </div>
+</div>
                 </div>
             </div>
         </div>
