--- a/cindex.html
+++ b/cindex.html
@@ -36,9 +36,11 @@
     <div>
         <p>
             Shane Nicole M. Fernandez <br>
-            <a href="tel:09202070840">09202070840</a>
+            <a href="tel:+639202070840">0920 207 0840</a>
         </p>
     </div>
+</div>
+
 </div>
                 </div>
             </div>
