--- a/cindex.html
+++ b/cindex.html
@@ -26,23 +26,11 @@
         </div>
         <div class="contact_container">
             <div class="contact_items">
-<a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank" rel="noopener noreferrer">
-  <img src="images/fblogo.png" alt="Facebook Profile">
-</a>
-
+                <a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank"><img src="images/fblogo.png"></a>
+                
             </div>
-<div class="contact_items">
-    <img src="images/phone.png" alt="Phone Icon">
-    <div>
-        <p>
-            Shane Nicole M. Fernandez <br>
-            <a href="tel:+639202070840">0920 207 0840</a>
-        </p>
-    </div>
-</div>
-
-</div>
-                </div>
+            <div class="contact_items">
+                <a href="tel:+639202070840"><img src="images/phone.png"></a>
             </div>
         </div>
         <div class="remarks">
