--- a/cindex.html
+++ b/cindex.html
@@ -26,11 +26,20 @@
         </div>
         <div class="contact_container">
             <div class="contact_items">
-                <a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank"><img src="images/fblogo.png"></a>
-                
+                <a href="https://www.facebook.com/profile.php?id=61572047443076" target="_blank"><img src="images/fblogo1.png"></a>
+                <div>
+                    <p>
+                        Our Facebook Page
+                    </p>
+                </div>
             </div>
             <div class="contact_items">
-                <a href="tel:+639202070840"><img src="images/phone.png"></a>
+                <a href="tel:+639202070840"><img src="images/phone1.png"></a>
+                <div>
+                    <p>
+                        Our Contact Number
+                    </p>
+                </div>
             </div>
         </div>
         <div class="remarks">
