--- a/pindex.html
+++ b/pindex.html
@@ -10,12 +10,12 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <div class="logo"><a href="/"><img src="images/logo.png"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
             <div class="title"><h1>From Love, With Love</h1></div>
         </div>
         <div class="navbar">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aindex.html">About us</a></li>
                 <li><a class="products" href="pindex.html">Products</a></li>
                 <li><a href="cindex.html">Contact us</a></li>
