--- a/aindex.html
+++ b/aindex.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <div class="logo"><a href="/"><img src="images/logo.png"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
             <div class="title"><h1>From Love, With Love</h1></div>
         </div>
         <div class="navbar">
