--- a/aindex.html
+++ b/aindex.html
@@ -47,7 +47,7 @@
                     the reigning merchandise business.</p>
             </div>
             <div>
-                <p class="history">Vission</p>
+                <p class="history">Vision</p>
             </div>
             <div class="statement">
                 <p>“From Love, With Love” pictures a satisfied and well-styled community, striving to color 
