--- a/aindex.html
+++ b/aindex.html
@@ -47,7 +47,7 @@
                     the reigning merchandise business.</p>
             </div>
             <div>
-                <p class="history">Vision</p>
+                <p class="history">Vission</p>
             </div>
             <div class="statement">
                 <p>“From Love, With Love” pictures a satisfied and well-styled community, striving to color 
@@ -63,26 +63,33 @@
         </div>
         <div class="profile_container">
             <div class="profile_item">
-                <div class="circle"><img src="images/owner3.png"></div>
+                <div class="circle"><img src="images/profile.png"></div>
                 <p>
                     Shane Nicole M.  Fernandez <br>
                     Fernandezshanenicole06@gmail.com
                 </p>
             </div>
             <div class="profile_item">
-                <div class="circle"><img src="images/owner2.png"></div>
+                <div class="circle"><img src="images/profile.png"></div>
                 <p>
                     John Ruel H. Peralta <br>
                     peraltajr97@gmail.com
                 </p>
             </div>
             <div class="profile_item">
-                <div class="circle"><img class="owner1" src="images/owner1.png"></div>
+                <div class="circle"><img class="owner1" src="images/profile.png"></div>
                 <p>
                     Xhenaile Alexa D. Villarea <br>
                     xhenaile27@gmail.com                 
                 </p>
             </div>
+        </div>
+        <div class="history">Location</div>
+        <div class="location">
+            
+            <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3863.053775366979!2d120.8915408!3d14.481601600000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x339632cbb5861b91%3A0x26d9e7d371578b3a!2s165%20Atty%2C%20Caridad%2C%20Cavite%20City%2C%20Cavite!5e0!3m2!1sen!2sph!4v1748694424047!5m2!1sen!2sph" 
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
         </div>
         <div class="qoute"><p><i>"Made by hand, crafted with love."</i></p></div>
         <div class="footer">
