--- a/aindex.html
+++ b/aindex.html
@@ -74,22 +74,19 @@
             <div class="profile_item">
                 <div class="circle"><img src="images/profile.png"></div>
                 <p>
-                    Shane Nicole M.  Fernandez <br>
-                    Fernandezshanenicole06@gmail.com
+                    Shane Nicole M.  Fernandez 
                 </p>
             </div>
             <div class="profile_item">
                 <div class="circle"><img src="images/profile.png"></div>
                 <p>
-                    John Ruel H. Peralta <br>
-                    peraltajr97@gmail.com
+                    John Ruel H. Peralta 
                 </p>
             </div>
             <div class="profile_item">
                 <div class="circle"><img class="owner1" src="images/profile.png"></div>
                 <p>
-                    Xhenaile Alexa D. Villarea <br>
-                    xhenaile27@gmail.com                 
+                    Xhenaile Alexa D. Villarea              
                 </p>
             </div>
         </div>
